--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "next",
+		"@sveltejs/adapter-netlify": "^1.0.0-next.36",
 		"@sveltejs/kit": "next",
 		"autoprefixer": "^10.4.0",
 		"prettier": "^2.4.1",
